# rust-ai-agent-hub

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  agents.toml
src/: main.rs
src/core/: agent.rs  chat.rs  cli.rs  data.rs  error.rs  llm_client.rs  mod.rs
