[package]
name = "rust-ai-agent-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
dotenvy = "0.15"
config = "0.14"
toml = "0.8"
